Email/Views internacionalizadas + Ajustes